--- a/chart/src/app/app.component.html
+++ b/chart/src/app/app.component.html
@@ -1,8 +1,7 @@
-<p>chart works!</p>
-<div class="row">
-    <div class="col">
-        <div id="chart">
-            <canvas id="graphChart"></canvas>
+<div class="container relative min-h-screen mx-auto flex flex-col align-middle justify-center">
+    <div class="flex-col">
+        <div class="text-2xl text-center">
         </div>
+        <app-chart></app-chart>
     </div>
 </div>
