--- a/chart/src/app/chart/chart.component.css
+++ b/chart/src/app/chart/chart.component.css
@@ -2,7 +2,7 @@
     display: flex;
     margin: auto;
     padding: 20px;
-    width: 500px;
+    max-width: 100%;
     height: 500px;
     border: 1px solid black;
 }
